ngnix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaca
  labels:
    app: vaca
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vaca
  template:
    metadata:
      labels:
        app: vaca
    spec:
      containers:
      - name: vaca
        image: danielsabana/vaca:1.50.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        startupProbe:
          httpGet:
            path: /vaca
            port: 8080
          initialDelaySeconds: 11

            #Jmeter / xyz
