otro-deploymen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estudiante
  labels:
    app: estudiante
spec:
  replicas: 2
  selector:
    matchLabels:
      app: estudiante
  template:
    metadata:
      labels:
        app: estudiante
    spec:
      containers:
      - name: estudiante
        image: stirlingtools/stirling-pdf:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
